--- a/app/src/main/assets/reader.html
+++ b/app/src/main/assets/reader.html
@@ -3,12 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>EPUB Reader</title>
-
-    <!-- JSZip (required for epub.js to unzip .epub) -->
-    <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-    <!-- epub.js -->
-    <script src="https://cdn.jsdelivr.net/npm/epubjs/dist/epub.min.js"></script>
-
+    <script src="www/jszip.min.js"></script>
+    <script src="www/epub.min.js"></script>
     <style>
         html, body {
           margin: 0;
